--- a/app/_assets/scss/partials/_base.scss
+++ b/app/_assets/scss/partials/_base.scss
@@ -1,13 +1,13 @@
 // Font weights
 $light: 100;
 $regular: 300;
-$bold: 500;
-$extra-bold: 600;
+$bold: 600;
+$extra-bold: 700;
 
 // Base Font
 $base-font-family: sans-serif;
 $base-font-weight: $regular;
-$base-font-size: 13px;
+$base-font-size: 14px;
 $base-line-height: 23px;
 
 // Fixed Font
@@ -51,4 +51,4 @@ $long-cubic-transition: all .5s cubic-bezier(0.175, 0.885, 0.320, 1.275);
 // Path
 $image-dir: "../img";
 $sprites-dir: $image-dir + "/sprites";
-$logos-sprite: $sprites-dir + "/logos.png";
+$logos-sprite: $sprites-dir + "/gdg-logos.png";
