More config to detail for GDG Suncoast

--- a/app/_includes/general/head.html
+++ b/app/_includes/general/head.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <meta name="author" content="Oleh Zasadnyy, GDG Lviv">
+    <meta name="author" content="Mike Traverso, GDG SunCoast">
     <meta name="description" content="{{ site.data.[site.lang].general.basic.description }}">
     <meta name="keywords" content="{{ site.data.[site.lang].general.basic.metaKeywords }}">
     <meta name="google-site-verification" content="{{ site.data.[site.lang].general.basic.webtoolsSiteVerification }}" />
@@ -44,7 +44,7 @@
 
     <link href="{{ "/css/main.css" | prepend: site.baseurl_root }}" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300,600' rel='stylesheet' type='text/css'>
-    
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
