--- a/app/_includes/index/hero.html
+++ b/app/_includes/index/hero.html
@@ -6,10 +6,24 @@
         {% assign heroText = site.data.[site.lang].index.hero.title | split:"<typeout>" %}
         <h1>{{ heroText[0] }}<span id="typeout-text" class="hidden-xs"></span><span class="typeout-fallback">{{ site.data.[site.lang].index.hero.typeoutFallback }}</span>{{ heroText[1] }}</h1>
         <p>{{ site.data.[site.lang].index.hero.eventDate }}</p>
+        <div class="row">
+      			<ul class="social-links">
+              {% for social in site.data.[site.lang].index.hero.socialLinks %}
+      				<li>
+      					<a href="{% if social.permalink != null %} {{ social.permalink | prepend: site.baseurl }} {% else %} {{ social.link }} {% endif %}" target="_blank">
+      						<svg class="icon-large icon-{{ social.name }}" viewBox="0 0 30 32">
+      							<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.baseurl_root }}/img/sprites/sprites.svg#icon-{{ social.name }}"></use>
+      						</svg>
+      					</a>
+      				</li>
+              {% endfor %}
+      			</ul>
+      	</div>
             {% for button in site.data.[site.lang].index.hero.buttons %}
         <a href="{% if button.permalink != null %} {{ button.permalink | prepend: site.baseurl }} {% else %} {{ button.link }} {% endif %}" class="btn btn-primary waves-effect waves-button waves-light waves-float" {% if button.link != null %}target="_blank"{% endif %}>{{ button.text }}</a>
         {% endfor %}
     </div>
+    <p>
     <a href="#about" class="explore">
         <svg class="icon icon-arrow-down" viewBox="0 0 32 32">
             <use xlink:href="{{ site.baseurl_root }}/img/sprites/sprites.svg#icon-arrow-down"></use>
