--- a/app/_includes/index/partners.html
+++ b/app/_includes/index/partners.html
@@ -15,7 +15,7 @@
                 {% endfor %}
             </ul>
             {% endfor %}
-            <a href="{{ site.data.[site.lang].index.partners.c4sponsorsUrl | prepend: site.baseurl }}" class="btn btn-primary waves-effect waves-button waves-light waves-float">{{ site.data.[site.lang].index.partners.c4sponsorsButton }}</a>
+            <a href="{{ site.data.[site.lang].index.partners.c4sponsorsUrl }}" class="btn btn-primary waves-effect waves-button waves-light waves-float" target="_blank">{{ site.data.[site.lang].index.partners.c4sponsorsButton }}</a>
         </div>
     </div>
 </section>
